--- a/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
@@ -28,6 +28,14 @@
         <Setter Property="HorizontalAlignment" Value="Center"/>
     </Style>
 
+    <Style x:Key="AnalysisContentProviderTitleTextBlock" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="{StaticResource Graphite}"/>
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+    </Style>
+
 
     <Style x:Key="ColumnDataPoint" TargetType="chartingToolkit:ColumnDataPoint">
         <Setter Property="Template">
