--- a/RepositoryParser/RepositoryParser/View/FilteringView.xaml
+++ b/RepositoryParser/RepositoryParser/View/FilteringView.xaml
@@ -21,7 +21,6 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="70"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -47,7 +46,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="8*"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="5"/>
+                <RowDefinition Height="70"/>
             </Grid.RowDefinitions>
 
 
@@ -206,22 +205,17 @@
                 </Button>
             </StackPanel>
 
-            <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
+            <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" VerticalAlignment="Center" >
                 <Button x:Name="SendBtn"
                     Command="{Binding SendDataCommand}"
-                    Style="{StaticResource AppGraphiteButton}"
-                    Background="{StaticResource MyGreen}"
-                    Foreground="{StaticResource Graphite}"
-                    FontSize="20" 
-                    Margin="2" 
-                    Padding="25,4" 
+                    Style="{StaticResource MainTile}"
                     HorizontalAlignment="Center"
-                    BorderBrush="{StaticResource Graphite}"
-                    BorderThickness="2"
+                    Height="50"
+                    Width="200"
                     >
-                    <StackPanel Orientation="Horizontal" Width="{Binding ElementName=SendBtn, Path=Width}">
-                        <Image Source="../Assets/Icons/Message_Black.png" Height="24" Margin="2,0,10,0"/>
-                        <TextBlock Text="{x:Static resw:Resources.SendDataButton}" VerticalAlignment="Center" FontSize="22"/>
+                    <StackPanel Orientation="Horizontal" Width="{Binding ElementName=SendBtn, Path=Width}" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <Image Source="../Assets/Icons/Message-50.png" Height="32" Margin="15,0,10,0"/>
+                        <TextBlock Text="{x:Static resw:Resources.SendDataButton}" VerticalAlignment="Center" FontSize="18" Style="{StaticResource AppWhiteTextBlock}"/>
                     </StackPanel>
                 </Button>
             </StackPanel>
