--- a/RepositoryParser/RepositoryParser/View/DifferencesView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DifferencesView.xaml
@@ -1,34 +1,22 @@
-﻿<controls:MetroWindow x:Class="RepositoryParser.View.DifferenceWindowView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RepositoryParser.View"
-        xmlns:utils="clr-namespace:RepositoryParser.Core.Utils;assembly=RepositoryParser.Core"
-        xmlns:resw="clr-namespace:RepositoryParser.Properties"
-        xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        mc:Ignorable="d"
-         Title="{x:Static resw:Resources.DiffView}" Height="600" Width="900"
-        DataContext="{Binding Source={StaticResource Locator}, Path=Difference}"
-        Icon="../Assets/Icons/Chart_Icon_Main.png" 
-        >
-
-    <Window.Resources>
+﻿<UserControl x:Class="RepositoryParser.View.DifferencesView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:RepositoryParser.View"
+             xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
+             xmlns:resw="clr-namespace:RepositoryParser.Properties"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             mc:Ignorable="d" 
+             d:DesignHeight="600" d:DesignWidth="600"
+             DataContext="{Binding Source={StaticResource Locator}, Path=Difference}"
+             >
+    
+    <UserControl.Resources>
         <conventers:ChangeTypeToBackgroundColorConventer x:Key="ChangeTypeToBackgroundColorConventer"/>
         <conventers:EnumToColorConventer x:Key="EnumToColorConventer"/>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
-        <Style x:Key="GridViewExtraStyle" TargetType="{x:Type GridViewColumnHeader}">
-            <Setter Property="Width" Value="1000"/>
-        </Style>
-    </Window.Resources>
-
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Closed">
-            <i:InvokeCommandAction Command="{Binding ClosedEventCommand}"/>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -37,20 +25,19 @@
             <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="5"/>
         </Grid.RowDefinitions>
 
-        <Rectangle Grid.ColumnSpan="1000" Grid.Row="0">
-            <Rectangle.Fill>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="{StaticResource AppBorder}" Offset="0" />
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
+        <TextBlock Grid.Row="0" Grid.Column="0" 
+                       Grid.ColumnSpan="3"
+                       Text="{x:Static resw:Resources.DifferenceWindowTitle}"
+                       Style="{StaticResource AnalysisContentProviderTitleTextBlock}" 
+                       />
+
         <Rectangle Grid.ColumnSpan="2" Grid.Row="2" Grid.Column="1" Height="30" VerticalAlignment="Top">
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -58,15 +45,6 @@
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Label Grid.Row="0" Grid.Column="0" 
-               Grid.ColumnSpan="3" 
-               FontSize="28"
-               VerticalAlignment="Center"
-               HorizontalAlignment="Center" 
-               Content="{x:Static resw:Resources.DifferenceWindowTitle}" 
-               Width="auto"  
-               FontWeight="Light"
-               />
 
         <DataGrid Grid.Row="1" Grid.Column="0" Grid.RowSpan="3"
                       ItemsSource="{Binding CommitsCollection}"
@@ -108,7 +86,7 @@
         </DataGrid>
 
         <TextBlock Text="{x:Static resw:Resources.Changes}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,10,0,10" FontWeight="Light" FontSize="13" Foreground="{StaticResource Grey}"/>
-        <ScrollViewer x:Name="CommitScrollViewer" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
+        <ScrollViewer x:Name="CommitScrollViewer" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <StackPanel x:Name="TextAPanel" Grid.Column="1" Grid.Row="2" Margin="5,10,5,10">
                 <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextA}" IsEnabled="False">
                     <ListBox.ItemContainerStyle>
@@ -145,14 +123,11 @@
             </Button>
         </StackPanel>
 
-         <StatusBar Grid.Row="1" Grid.Column="0" 
+        <StatusBar Grid.Row="1" Grid.Column="0" 
                    Grid.RowSpan="3"
                    Grid.ColumnSpan="3"
                    Visibility="{Binding ProgressBarVisibility, Converter={StaticResource BoolToVisibilityConverter}, UpdateSourceTrigger=PropertyChanged}" 
-                   Opacity="0.9"
-                   Background="{StaticResource Grey}"
-                   HorizontalAlignment="Stretch"
-                   VerticalAlignment="Stretch"
+                   Style="{StaticResource AppStatusBar}"
                    >
         </StatusBar>
         <StackPanel Orientation="Horizontal" Grid.Row="0" 
@@ -161,17 +136,11 @@
                     VerticalAlignment="Center" HorizontalAlignment="Center"
                     Visibility="{Binding ProgressBarVisibility, Converter={StaticResource BoolToVisibilityConverter}, UpdateSourceTrigger=PropertyChanged}"
                     >
-            <controls:ProgressRing HorizontalAlignment="Center"
-                                       VerticalAlignment="Center"
-                                       IsActive="{Binding ProgressBarVisibility}"
-                                       Width="100"
-                                       Height="18"
-                                       Margin="3"
-                                       Opacity="1"
-                                       Foreground="{StaticResource MyGreen}"
-                                       />
+            <controls:ProgressRing  IsActive="{Binding ProgressBarVisibility}"
+                                    Style="{StaticResource AppProgressRing}"
+                                    />
             <Separator/>
             <TextBlock Text="{x:Static resw:Resources.DataLoadingStatus}" Foreground="{StaticResource MyGreen}" FontSize="18" Visibility="{Binding IsOpening, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
     </Grid>
-</controls:MetroWindow>
+</UserControl>
