--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
@@ -52,6 +52,7 @@
                       AlternatingRowBackground="{StaticResource MyRowColor}" AlternationCount="2"
                       AutoGenerateColumns="False"
                       ColumnWidth="auto"
+                      IsReadOnly="True"
                       >
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Day}"/>
