--- a/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityChartView.xaml
@@ -50,6 +50,7 @@
                       AlternatingRowBackground="{StaticResource MyRowColor}" AlternationCount="2"
                       AutoGenerateColumns="False"
                       ColumnWidth="auto"
+                      IsReadOnly="True"
                       >
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Hour}"/>
