--- a/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityChartView.xaml
@@ -55,6 +55,7 @@
                       AlternatingRowBackground="{StaticResource MyRowColor}" AlternationCount="2"
                       AutoGenerateColumns="False"
                       ColumnWidth="auto"
+                      IsReadOnly="True"
                       >
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Month}"/>
