--- a/RepositoryParser/RepositoryParser/App.xaml
+++ b/RepositoryParser/RepositoryParser/App.xaml
@@ -9,6 +9,9 @@
     <ResourceDictionary>
       <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:RepositoryParser.ViewModel" />
             <ResourceDictionary.MergedDictionaries>
+                <!--RepositoryParser.Controls Lib-->
+                <ResourceDictionary Source="pack://application:,,,/RepositoryParser.Controls;component/Controls.xaml"/>
+                <!---->
                 <ResourceDictionary Source="Resources/Themes/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Themes/Colors.xaml"/>
                 <ResourceDictionary Source="../Resources/ButtonStyles.xaml"/>
@@ -20,7 +23,7 @@
                 <!-- Accent and AppTheme setting -->
                 <ResourceDictionary Source="../Resources/Themes/CustomTheme.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
-                
+
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
   </Application.Resources>
