--- a/RepositoryParser/RepositoryParser/Resources/Themes/Colors.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/Themes/Colors.xaml
@@ -5,8 +5,8 @@
 
 
 
-    <Color x:Key="AppBorder">#B0BEC5</Color>
+    <Color x:Key="AppBorder">Transparent</Color>
     <Color x:Key="AppMain">#263238</Color>
-    <Color x:Key="CustomColor1">#95210a</Color>
+    <Color x:Key="CustomColor1">#8d5524</Color>
     
 </ResourceDictionary>
