--- a/RepositoryParser/RepositoryParser.Controls/Controls.xaml
+++ b/RepositoryParser/RepositoryParser.Controls/Controls.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:RepositoryParser.Controls"
-                    xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton">
+                    xmlns:local="clr-namespace:RepositoryParser.Controls">
     
-   
+    <ResourceDictionary.MergedDictionaries>
+        
+    </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
