--- a/RepositoryParser/RepositoryParser/Resources/ButtonStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/ButtonStyles.xaml
@@ -1,7 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:RepositoryParser.Resources"
-                    xmlns:resw="clr-namespace:RepositoryParser.Properties">
+                    xmlns:resw="clr-namespace:RepositoryParser.Properties"
+                    xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
+                    xmlns:conventers="clr-namespace:RepositoryParser.Controls.ImageButton.Conventers;assembly=RepositoryParser.Controls">
 
 
 
@@ -95,6 +97,7 @@
 
     </Style>
 
+
     <Style x:Key="MainTile" TargetType="Button">
         <Setter Property="Height" Value="80"/>
         <Setter Property="Margin" Value="0,0,0,5"/>
@@ -102,36 +105,6 @@
         <Setter Property="Foreground" Value="{StaticResource Grey}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="15"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Border  RenderTransformOrigin="0.5 0.5"
-                              x:Name="Border"  
-                              Background="{TemplateBinding Background}">
-                        <Border.RenderTransform>
-                            <ScaleTransform ScaleX="1.0" ScaleY="1.0" CenterX="0.5" CenterY="0.5" />
-                        </Border.RenderTransform>
-                        <ContentPresenter 
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                RecognizesAccessKey="True"/>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsPressed" Value="true">
-                            <Trigger.EnterActions>
-                                <BeginStoryboard>
-                                    <Storyboard AutoReverse="True">
-                                        <DoubleAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="RenderTransform.ScaleX" From="1.0" To="0.9" Duration="00:00:0.1"/>
-                                        <DoubleAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="RenderTransform.ScaleY" From="1.0" To="0.9" Duration="00:00:0.1"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </Trigger.EnterActions>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
     </Style>
 
     <Style x:Key="AnalysisTile" TargetType="Button">
@@ -213,4 +186,11 @@
         </Setter>
     </Style>
 
+    <conventers:LenghtToAnimationLenghtConventer x:Key="LenghtToAnimationLenghtConventer"/>
+    <conventers:BoolToOrientationConventer x:Key="BoolToOrientationConventer"/>
+    <conventers:BoolToHorizontalAlligmentConventer x:Key="BoolToHorizontalAlligmentConventer"/>
+
+
+    
+    
 </ResourceDictionary>
