--- a/RepositoryParser/RepositoryParser/Resources/Themes/Brushes.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/Themes/Brushes.xaml
@@ -4,14 +4,15 @@
 
 
 
-    <SolidColorBrush x:Key="MyGreen" Color="#B0BEC5" />
-    <SolidColorBrush x:Key="Graphite" Color="#263238" />
+    <SolidColorBrush x:Key="MyGreen" Color="#C0C0C0" />
+    <SolidColorBrush x:Key="Graphite" Color="#336600" />
+   <!-- <SolidColorBrush x:Key="Graphite" Color="#336699" />-->
     <SolidColorBrush x:Key="Grey" Color="#FAFAFA" />
     <SolidColorBrush x:Key="GitOrange" Color="#F34F29"/>
     <SolidColorBrush x:Key="SvnBlue" Color="#809CC8"/>
     <SolidColorBrush x:Key="ChangesGreen" Color="#6BBC7D"/>
     <SolidColorBrush x:Key="ChangesRed" Color="#FC7979"/>
     <SolidColorBrush x:Key="ChangesBlue" Color="#74BBC9"/>
-    <SolidColorBrush x:Key="MyRowColor" Color="#CFD8DC"/>
+    <SolidColorBrush x:Key="MyRowColor" Color="#C0C0C0"/>
 
 </ResourceDictionary>
