--- a/RepositoryParser/RepositoryParser/Resources/Themes/CustomTheme.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/Themes/CustomTheme.xaml
@@ -5,16 +5,18 @@
                     mc:Ignorable="options">
 
     <!--ACCENT COLORS-->
-    <Color x:Key="HighlightColor">#424242</Color>
-
+    <Color x:Key="HighlightColor">#f1c27d</Color>
+    <Color x:Key="Raspberry">#990033</Color>
+    <Color x:Key="c0c0">#C0C0C0</Color>
+    
     <!--80%-->
-    <Color x:Key="AccentColor">#263238</Color>
+    <Color x:Key="AccentColor">#336600</Color>
     <!--60%-->
-    <Color x:Key="AccentColor2">#546E7A</Color>
+    <Color x:Key="AccentColor2">#477519</Color>
     <!--40%-->
-    <Color x:Key="AccentColor3">#90A4AE</Color>
+    <Color x:Key="AccentColor3">#5b8432</Color>
     <!--20%-->
-    <Color x:Key="AccentColor4">#CFD8DC</Color>
+    <Color x:Key="AccentColor4">#99b27f</Color>
 
     <!-- re-set brushes too -->
     <SolidColorBrush x:Key="HighlightBrush" Color="{StaticResource HighlightColor}" options:Freeze="True" />
@@ -34,17 +36,17 @@
     <SolidColorBrush x:Key="CheckmarkFill" Color="{StaticResource AccentColor}" options:Freeze="True" />
     <SolidColorBrush x:Key="RightArrowFill" Color="{StaticResource AccentColor}" options:Freeze="True" />
 
-    <Color x:Key="IdealForegroundColor">White</Color>
+    <Color x:Key="IdealForegroundColor">#C0C0C0</Color>
     <SolidColorBrush x:Key="IdealForegroundColorBrush" Color="{StaticResource IdealForegroundColor}" options:Freeze="True" />
     <SolidColorBrush x:Key="IdealForegroundDisabledBrush" Color="{StaticResource IdealForegroundColor}" Opacity="0.4" options:Freeze="True" />
     <SolidColorBrush x:Key="AccentSelectedColorBrush" Color="{StaticResource IdealForegroundColor}" options:Freeze="True" />
 
     <!-- DataGrid brushes -->
-    <SolidColorBrush x:Key="MetroDataGrid.HighlightBrush" Color="{StaticResource AccentColor2}" options:Freeze="True" />
-    <SolidColorBrush x:Key="MetroDataGrid.HighlightTextBrush" Color="{StaticResource CustomColor1}" options:Freeze="True" />
-    <SolidColorBrush x:Key="MetroDataGrid.MouseOverHighlightBrush" Color="{StaticResource AccentColor3}" options:Freeze="True" />
-    <SolidColorBrush x:Key="MetroDataGrid.FocusBorderBrush" Color="{StaticResource AccentColor}" options:Freeze="True" />
-    <SolidColorBrush x:Key="MetroDataGrid.InactiveSelectionHighlightBrush" Color="{StaticResource AccentColor2}" options:Freeze="True" />
+    <SolidColorBrush x:Key="MetroDataGrid.HighlightBrush" Color="{StaticResource AccentColor4}" options:Freeze="True" />
+    <SolidColorBrush x:Key="MetroDataGrid.HighlightTextBrush" Color="{StaticResource Raspberry}" options:Freeze="True" />
+    <SolidColorBrush x:Key="MetroDataGrid.MouseOverHighlightBrush" Color="{StaticResource AccentColor4}" options:Freeze="True" />
+    <SolidColorBrush x:Key="MetroDataGrid.FocusBorderBrush" Color="{StaticResource AccentColor3}" options:Freeze="True" />
+    <SolidColorBrush x:Key="MetroDataGrid.InactiveSelectionHighlightBrush" Color="{StaticResource c0c0}" options:Freeze="True" />
     <SolidColorBrush x:Key="MetroDataGrid.InactiveSelectionHighlightTextBrush" Color="{StaticResource IdealForegroundColor}" options:Freeze="True" />
 
     <SolidColorBrush x:Key="MahApps.Metro.Brushes.ToggleSwitchButton.OnSwitchBrush.Win10" Color="{StaticResource AccentColor}" options:Freeze="True" />
