--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -90,56 +90,35 @@
                    Visibility="{Binding CurrentViewModel, Converter={StaticResource NegativeViewModelBaseToVisibilityConventer}}"
                    />
     
+        <!--Buttons Panel: left -->
         <StackPanel Grid.Row="1" Grid.Column="0">
-            <Button x:Name="PresentationBtn"
-                    Style="{StaticResource MainTile}"
-                    Command="{Binding OpenPresentationCommand}"
-                    >
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=PresentationBtn, Path=ActualWidth}" >
-                        <Image Source="../Assets/Icons/Presentation-100.png" Width="36" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.Presentation}" Style="{StaticResource AppWhiteTextBlock}"/>
-                    </StackPanel>
-                </Button>
-
-            <Button x:Name="DBManagementBtn"
-                    Style="{StaticResource MainTile}"
-                    Command="{Binding OpenDataBaseManagementCommand}"
-                    >
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=DBManagementBtn, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/ManagementIcon.png" Width="36" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.DataBaseManagement}" Style="{StaticResource AppWhiteTextBlock}"/>
-                </StackPanel>
-            </Button>
-
-            <Button x:Name="FilteringBtn"
-                    Style="{StaticResource MainTile}"
-                    Command="{Binding OpenFilteringCommand}"
-                    >
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=FilteringBtn, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/Filter-100.png" Width="36" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.Filtering}" Style="{StaticResource AppWhiteTextBlock}"/>
-                </StackPanel>
-            </Button>
-
-            <Button x:Name="AnalysisBtn"
-                    Style="{StaticResource MainTile}"
-                    Command="{Binding OpenAnalysisCommand}"
-                    >
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=AnalysisBtn, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/Analysis_grey.png" Width="36" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.AnalysisButton}" Style="{StaticResource AppWhiteTextBlock}"/>
-                </StackPanel>
-            </Button>
+            <imageButton:ImageButton 
+                x:Name="PresentationBtn"
+                Background="{StaticResource Graphite}"
+                Command="{Binding OpenPresentationCommand}"
+                ImageSource="../Assets/Icons/Presentation-100.png"
+                Text="{x:Static resw:Resources.Presentation}"/>
             
             <imageButton:ImageButton 
-                Text="test bardzo" 
-                ImageSource="../Assets/Icons/Analysis_grey.png"
-                Foreground="White"
+                x:Name="DBManagementBtn"
                 Background="{StaticResource Graphite}"
-                ImageHeight="24"
-                ImageWidth="24"
-                />
-            
+                Command="{Binding OpenDataBaseManagementCommand}"
+                ImageSource="../Assets/Icons/ManagementIcon.png"
+                Text="{x:Static resw:Resources.DataBaseManagement}"/>
+
+            <imageButton:ImageButton 
+                x:Name="FilteringBtn"
+                Background="{StaticResource Graphite}"
+                Command="{Binding OpenFilteringCommand}"
+                ImageSource="../Assets/Icons/Filter-100.png"
+                Text="{x:Static resw:Resources.Filtering}"/>
+
+            <imageButton:ImageButton 
+                x:Name="AnalysisBtn"
+                Background="{StaticResource Graphite}"
+                Command="{Binding OpenAnalysisCommand}"
+                ImageSource="../Assets/Icons/Analysis_grey.png"
+                Text="{x:Static resw:Resources.AnalysisButton}"/>
         </StackPanel>
 
         <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding CurrentViewModel}"/>
