--- a/RepositoryParser/RepositoryParser/Resources/Themes/Brushes.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/Themes/Brushes.xaml
@@ -4,8 +4,8 @@
 
 
 
-    <SolidColorBrush x:Key="MyGreen" Color="#C0C0C0" />
-    <SolidColorBrush x:Key="Graphite" Color="#336600" />
+    <SolidColorBrush x:Key="MyGreen" Color="#aaaaaa" />
+    <SolidColorBrush x:Key="Graphite" Color="#1a472a" />
    <!-- <SolidColorBrush x:Key="Graphite" Color="#336699" />-->
     <SolidColorBrush x:Key="Grey" Color="#FAFAFA" />
     <SolidColorBrush x:Key="GitOrange" Color="#F34F29"/>
